src/objects/Deal__c.object
<CustomObject>
    <description>The terms and relationships of artists, co-promoters, and possibly 3rd-party venues or other partners in an event who are required to participate in event revenues and/or expenses</description>
    <fields>
        <fullName>AncillaryRevenue__c</fullName>
        <label>Ancillary Revenue</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AncillaryShareAmountAtProjection__c</fullName>
        <formula>IF(ISPICKVAL(Type__c, &apos;Internal&apos;),
   /* T */
   LNEAncillaryShareAmountAtProjection__c,
   /* F */
   IF ((ProfitShareAmtAtProjFC__c + ExpenseAdjustShareAmtAtProjFC__c + AncillaryShareAmtAtProjFC__c &lt; 0) &amp;&amp;  DownsideRisk__c = False,
      /* T */
      0,
      /* F */
      AncillaryRevenue__c *  AncillaryShareAmtAtProjFC__c
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ancillary Share Amount At Projection</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AncillaryShareAmountAtSellout__c</fullName>
        <formula>IF(ISPICKVAL(Type__c, &apos;Internal&apos;),
   /* T */
   LNEAncillaryShareAmountAtSellout__c,
   /* F */
   IF ((ProfitShareAmtAtSellFC__c + ExpenseAdjustShareAmtAtSellFC__c + AncillaryShareAmtAtSellFC__c &lt; 0) &amp;&amp;  DownsideRisk__c = False,
      /* T */
      0,
      /* F */
      AncillaryRevenue__c *  AncillaryShareAmtAtSellFC__c
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ancillary Share Amount At Sellout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AncillaryShareAmtAtProjFC__c</fullName>
        <formula>/**/

RollUpAncillaryShareAmtAtProj__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ancillary Share Amt At Proj FC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AncillaryShareAmtAtSellFC__c</fullName>
        <formula>RollUpAncillaryShareAmtAtSell__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ancillary Share Amt At Sell FC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ArtistBackendCalculationPotential__c</fullName>
        <label>Artist Backend Calculation Potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ArtistEarningsPotential__c</fullName>
        <formula>IF(ISPICKVAL(DealType__c, &apos;Flat&apos;),
/* TRUE */
TotalGuaranteesandOverhead__c,

/* FALSE - other Deal Types */
IF(GuaranteeAmount__c + InclusiveArtistExpensesPerDealCalc__c + BonusPotentialGuarantee__c =
 MAX(
  /* LEFT SIDE of MAX */
  GuaranteeAmount__c + InclusiveArtistExpensesPerDealCalc__c + BonusPotentialGuarantee__c,

  /* RIGHT SIDE of MAX */
  CASE(TEXT(DealType__c),
   &apos;Percentage of Gross&apos;, (Event__r.NetGrossPotential__c * SplitBackendPercent__c),
   &apos;Percentage of Net&apos;, (Event__r.NetPotPotential__c * SplitBackendPercent__c),
   &apos;Promoter Profit&apos;, (Event__r.PotentialToBeSharedAmount__c * SplitBackendPercent__c),
   &apos;Gross Split Point&apos;, (InclusiveArtistExpensesPerDealCalc__c + (Event__r.PotentialToBeSharedAmount__c * SplitBackendPercent__c)),
  /* CASE() DEFAULT - and applies to all Retro/Step Up deal types */
   BackendPotential__c)

 /* END MAX */
 ),

/* TRUE - Event did not go into percentages - guarantees paid out */
TotalGuaranteesandOverhead__c,

/* FALSE - Event went into percentages - artist participation/overage paid out */
CASE(TEXT(DealType__c),
 &apos;Percentage of Gross&apos;, (Event__r.NetGrossPotential__c * SplitBackendPercent__c),
 &apos;Percentage of Net&apos;, (Event__r.NetPotPotential__c * SplitBackendPercent__c),
 &apos;Promoter Profit&apos;, (Event__r.PotentialToBeSharedAmount__c * SplitBackendPercent__c),
 &apos;Gross Split Point&apos;, (InclusiveArtistExpensesPerDealCalc__c + (Event__r.PotentialToBeSharedAmount__c * SplitBackendPercent__c)),
/* CASE() DEFAULT - and applies to all Retro/Step Up deal types */
 BackendPotential__c)

 /* END IFs */
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Artist Earnings Potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ArtistSuppliedSL__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Artist Supplied S&amp;L</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ArtistWalkoutPotential__c</fullName>
        <formula>IF(
   ISPICKVAL(DealType__c, &apos;Flat&apos;) ||
   ISPICKVAL(DealType__c, &apos;Percentage of Gross&apos;) ||
   ISPICKVAL(DealType__c, &apos;Percentage of Net&apos;) ||
   ISPICKVAL(DealType__c, &apos;Retro Gross Deal&apos;) ||
   ISPICKVAL(DealType__c, &apos;Retro Net Deal&apos;) ||
   ISPICKVAL(DealType__c, &apos;Step Up Gross Deal&apos;) ||
   ISPICKVAL(DealType__c, &apos;Step Up Net Deal&apos;) ||
   ISPICKVAL(DealType__c, &apos;Promoter Profit&apos;) ||
   ISPICKVAL(DealType__c, &apos;Gross Split Point&apos;),
      /* TRUE */
      ArtistEarningsPotential__c + BonusPotential__c,

      /* FALSE */
      0
/* END IF */
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Artist Walkout Potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Artist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Artist</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Artist Deals</relationshipLabel>
        <relationshipName>ArtistDeals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BackendPercent__c</fullName>
        <label>Backend %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BackendPotential__c</fullName>
        <label>Backend Potential</label>
        <summarizedField>ArtistRetroStepUpDetail__c.BackendPotentialNonFormula__c</summarizedField>
        <summaryForeignKey>ArtistRetroStepUpDetail__c.Deal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BonusPotentialGuarantee__c</fullName>
        <description>If Bonus.Apply To = Guarantee, then the bonus will be included in the guarantee for deal calculation purposes.</description>
        <label>Bonus Potential - Guarantee</label>
        <summarizedField>BonusDetail__c.BonusPotentialatSellout__c</summarizedField>
        <summaryFilterItems>
            <field>BonusDetail__c.ApplyTo__c</field>
            <operation>equals</operation>
            <value>Guarantee</value>
        </summaryFilterItems>
        <summaryForeignKey>BonusDetail__c.Deal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BonusPotential__c</fullName>
        <label>Bonus Potential</label>
        <summarizedField>BonusDetail__c.BonusPotentialatSellout__c</summarizedField>
        <summaryForeignKey>BonusDetail__c.Deal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CoPromoterBonusAtProjection__c</fullName>
        <formula>IF(ISPICKVAL(Type__c, &apos;Internal&apos;),
   0,
   IF((ProfitShareAmtAtProjFC__c + ExpenseAdjustShareAmtAtProjFC__c + AncillaryShareAmtAtProjFC__c &lt; 0) &amp;&amp;  DownsideRisk__c = False,
      0,
      ProjectedBonus__c
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Co-Promoter Bonus At Projection</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CoPromoterBonusAtSellout__c</fullName>
        <formula>IF(ISPICKVAL(Type__c, &apos;Internal&apos;),
   0,
   IF ((ProfitShareAmtAtSellFC__c + ExpenseAdjustShareAmtAtSellFC__c + AncillaryShareAmtAtSellFC__c &lt; 0) &amp;&amp;  DownsideRisk__c = False,
      0,
      BonusPotential__c
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Co-Promoter Bonus At Sellout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CoPromoterWalkoutAtProjection__c</fullName>
        <formula>IF(ISPICKVAL(Type__c, &apos;Internal&apos;),
   LNECoPromoterWalkoutAtProjection__c ,
   IF((ProfitShareAmtAtProjFC__c + ExpenseAdjustShareAmtAtProjFC__c + AncillaryShareAmtAtProjFC__c &lt; 0) &amp;&amp;  DownsideRisk__c = False,
      0,
      ProfitShareAmountAtProjection__c +  ExpenseAdjustmentShareAmountAtProj__c + AncillaryShareAmountAtProjection__c + CoPromoterBonusAtProjection__c
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Co-Promoter Walkout At Projection</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CoPromoterWalkoutAtSellout__c</fullName>
        <formula>IF(ISPICKVAL(Type__c, &apos;Internal&apos;),
   LNECoPromoterWalkoutAtSellout__c ,
   IF ((ProfitShareAmtAtSellFC__c + ExpenseAdjustShareAmtAtSellFC__c + AncillaryShareAmtAtSellFC__c &lt; 0) &amp;&amp;  DownsideRisk__c = False,
      0,
      ProfitShareAmountAtSellout__c +  ExpenseAdjustmentShareAmountAtSell__c + AncillaryShareAmountAtSellout__c + CoPromoterBonusAtSellout__c
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Co-Promoter Walkout At Sellout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CoPromoter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co-Promoter</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Co-Promoter Deals</relationshipLabel>
        <relationshipName>CoPromoterDeals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrencyDate__c</fullName>
        <label>Currency Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CurrencyExchange__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency Exchange</label>
        <referenceTo>CurrencyExchange__c</referenceTo>
        <relationshipLabel>Deals</relationshipLabel>
        <relationshipName>Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DealApplicationType__c</fullName>
        <label>Deal Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>DealType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Paid Tickets</fullName>
                </value>
                <value>
                    <fullName>To Be Shared Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DealCalculation__c</fullName>
        <label>Deal Calculation</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Guarantee Only</fullName>
                </value>
                <value>
                    <fullName>Inclusive of Other Talent Amount</fullName>
                </value>
                <value>
                    <fullName>Inclusive of Sound &amp; Lights</fullName>
                </value>
                <value>
                    <fullName>Inclusive of Sound &amp; Lights &amp; Other Talent Amount</fullName>
                </value>
                <value>
                    <fullName>Inclusive of Sound &amp; Lights &amp; Support</fullName>
                </value>
                <value>
                    <fullName>Inclusive of Sound &amp; Lights &amp; Support &amp; Other Talent Amount</fullName>
                </value>
                <value>
                    <fullName>Inclusive of Support</fullName>
                </value>
                <value>
                    <fullName>Inclusive of Support And Other Talent Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DealType__c</fullName>
        <label>Deal Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Gross Split Point</fullName>
                </value>
                <value>
                    <fullName>Percentage of Gross</fullName>
                </value>
                <value>
                    <fullName>Percentage of Net</fullName>
                </value>
                <value>
                    <fullName>Promoter Profit</fullName>
                </value>
                <value>
                    <fullName>Retro Gross Deal</fullName>
                </value>
                <value>
                    <fullName>Retro Net Deal</fullName>
                </value>
                <value>
                    <fullName>Step Up Gross Deal</fullName>
                </value>
                <value>
                    <fullName>Step Up Net Deal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Drives sharing rules to provide read-only access to other division members</description>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DownsideRisk__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Downside Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DuplicatePrimaryHeadlinerArtist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will be checked if there is a more than 1 primary headliner artist designated for an event</description>
        <label>Duplicate Primary Headliner Artist?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventLoss__c</fullName>
        <label>Event Loss</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EventProfit__c</fullName>
        <label>Event Profit</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Deals</relationshipLabel>
        <relationshipName>Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExpenseAdjustShareAmtAtProjFC__c</fullName>
        <formula>RollUpExpenseAdjustmentAtProjection__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expense Adjust Share Amt At Proj FC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExpenseAdjustShareAmtAtSellFC__c</fullName>
        <formula>RollUpExpenseAdjustmentAtSellout__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expense Adjust Share Amt At Sell FC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExpenseAdjustmentLoss__c</fullName>
        <label>Expense Adjustment Loss</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ExpenseAdjustmentProfit__c</fullName>
        <label>Expense Adjustment Profit</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ExpenseAdjustmentShareAmountAtProj__c</fullName>
        <formula>IF(ISPICKVAL(Type__c, &apos;Internal&apos;),
   /* T */
   LNEExpenseAdjShareAmountAtProj__c ,
   /* F */
   IF ((ProfitShareAmtAtProjFC__c + ExpenseAdjustShareAmtAtProjFC__c + AncillaryShareAmtAtProjFC__c &lt; 0) &amp;&amp;  DownsideRisk__c = False,
      /* T */
      0,
      /* F */
      IF (ProfitShareAmtAtProjFC__c &gt;= 0,
         /* T */
         ExpenseAdjustmentProfit__c *  ExpenseAdjustShareAmtAtProjFC__c ,
         /* F */
         ExpenseAdjustmentLoss__c * ExpenseAdjustShareAmtAtProjFC__c
      )
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expense Adjustment Share Amount At Proj</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExpenseAdjustmentShareAmountAtSell__c</fullName>
        <formula>IF(ISPICKVAL(Type__c, &apos;Internal&apos;),
   /* T */
   LNEExpenseAdjShareAmountAtSell__c ,
   /* F */
   IF ((ProfitShareAmtAtSellFC__c + ExpenseAdjustShareAmtAtSellFC__c + AncillaryShareAmtAtSellFC__c &lt; 0) &amp;&amp;  DownsideRisk__c = False,
      /* T */
      0,
      /* F */
      IF (ProfitShareAmtAtSellFC__c &gt;= 0,
         /* T */
         ExpenseAdjustmentProfit__c *  ExpenseAdjustShareAmtAtSellFC__c ,
         /* F */
         ExpenseAdjustmentLoss__c * ExpenseAdjustShareAmtAtSellFC__c
      )
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expense Adjustment Share Amount At Sell</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <label>Geography</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GuaranteeAmount__c</fullName>
        <label>Guarantee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InPercentageAtProjection__c</fullName>
        <formula>ProjectedArtistBackendCalculation__c &gt; GuaranteeAmount__c + InclusiveArtistExpensesPerDealCalc__c + BonusPotentialGuarantee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In Percentage at Projection?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InPercentageAtSellout__c</fullName>
        <formula>ArtistBackendCalculationPotential__c &gt; GuaranteeAmount__c + InclusiveArtistExpensesPerDealCalc__c + BonusPotentialGuarantee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In Percentage at Sellout?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InPercentageAtSettlement__c</fullName>
        <formula>SettlementArtistBackendCalculation__c &gt; GuaranteeAmount__c + InclusiveArtistExpensesPerDealCalc__c + BonusPotentialGuarantee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In Percentage at Settlement?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeArtistBonus__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include Artist Bonus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeArtistEarnings__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include Artist Earnings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeArtistExpenseColumn__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include Artist Expense Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeBonusWording__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include Bonus Wording</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeBoxOfficeSummary__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include Box Office Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeBreakeven__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Breakeven</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeCoHeadliner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Co-Headliner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeCoPromoters__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Co-Promoters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeDeductions__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include Deductions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeEarningsPotentialSection__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include Earnings Potential Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeExpenseBreakoutDetails__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include Expense Breakout Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeExpenseBreakouts__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include Expense Breakouts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeExpenseNotes__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include Expense Notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeExpenses__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include Expenses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeInOffer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether the deal should be included in the offer</inlineHelpText>
        <label>Include in Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeLNTouringExpenseColumn__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include LN Touring Expense Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeMarketingBreakoutDetails__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include Marketing Breakout Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeMarketingNotes__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include Marketing Notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeMerchDeal__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include Merch Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeNetGrossPotential__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include Net Gross Potential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeOfferExpenseColumn__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include Offer Expense Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeOfferNotes__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include Offer Notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeOfferWording__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include Offer Wording</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludePromoterEarnings__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Promoter Earnings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludePromoterSummary__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include Promoter Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludePromotersAddress__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include Promoter&apos;s Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeShowSummaryColumn__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include Show Summary Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeSummarySection__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include Summary Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeTalentGuarantee__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include Talent Guarantee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeTicketScalingMergedTotals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Ticket Scaling Merged Totals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeTicketScaling__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include Ticket Scaling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeToBeSharedAmount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include To Be Shared Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeTotalTalent__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include Total Talent, S&amp;L, &amp; Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeVarianceColumn__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include Variance Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeVenueExpenseColumn__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include Venue Expense Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeVenueNotes__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include Venue Notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeinTradeReporting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Trade Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InclusiveArtistExpensesPerDealCalc__c</fullName>
        <description>Per Deal Calc field: sum of artist expenses that are included in the comparison between inclusive guarantees and artist (backend) participation</description>
        <label>Inclusive Artist Expenses Per Deal Calc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LNEAncillaryShareAmountAtProjection__c</fullName>
        <label>LNE Ancillary Share Amount At Projection</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LNEAncillaryShareAmountAtSellout__c</fullName>
        <label>LNE Ancillary Share Amount At Sellout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LNECoPromoterWalkoutAtProjection__c</fullName>
        <label>LNE Co-Promoter Walkout At Projection</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LNECoPromoterWalkoutAtSellout__c</fullName>
        <label>LNE Co-Promoter Walkout At Sellout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LNEExpenseAdjShareAmountAtProj__c</fullName>
        <label>LNE Expense Adj Share Amount At Proj</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LNEExpenseAdjShareAmountAtSell__c</fullName>
        <label>LNE Expense Adj Share Amount At Sell</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LNEProfitShareAmountAtProjection__c</fullName>
        <label>LNE Profit Share Amount At Projection</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LNEProfitShareAmountAtSellout__c</fullName>
        <label>LNE Profit Share Amount At Sellout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OfficeName__c</fullName>
        <description>Drives sharing rules to provide edit access to other office members</description>
        <label>Office Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherTalentAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Other Talent Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OtherTalentDescription__c</fullName>
        <label>Other Talent Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OveragePotential__c</fullName>
        <formula>IF(RecordType.DeveloperName = &quot;Artist&quot; &amp;&amp; !ISPICKVAL(Type__c, &quot;Support&quot;) &amp;&amp; ArtistBackendCalculationPotential__c &gt; GuaranteeAmount__c + InclusiveArtistExpensesPerDealCalc__c + BonusPotentialGuarantee__c,

/* Primary or Co-Headliner */
ArtistBackendCalculationPotential__c - (GuaranteeAmount__c + InclusiveArtistExpensesPerDealCalc__c + BonusPotentialGuarantee__c),

/* Support */
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overage Potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PotentialInclusiveArtistExpenses__c</fullName>
        <formula>ArtistSuppliedSL__c +

IF(ISPICKVAL(StageType__c, &quot;Plan&quot;), Event__r.TotalSupportActExpenses__c,
IF(ISPICKVAL(StageType__c, &quot;Settlement&quot;), Event__r.SettlementTotalSupportActExpenses__c,
0))

+ OtherTalentAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Potential Inclusive Artist Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PotentialToBeSharedAmount__c</fullName>
        <formula>IF(ISBLANK(SplitPercentage__c),
  IF(ISPICKVAL(Type__c, &quot;Primary Headliner&quot;),
    1,
    0),
  SplitPercentage__c
) * Event__r.PotentialToBeSharedAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Potential To Be Shared Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PrimarySecondaryCoPromoter__c</fullName>
        <label>Primary/Secondary Co-Promoter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrimaryVenueOffice__c</fullName>
        <description>Drives sharing rules to provide edit access to booking members of the venue&apos;s primary office</description>
        <label>Primary Venue Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfitShareAmountAtProjection__c</fullName>
        <formula>IF(ISPICKVAL(Type__c, &apos;Internal&apos;),
   /* T */
   LNEProfitShareAmountAtProjection__c ,
   /* F */
   IF ((ProfitShareAmtAtProjFC__c + ExpenseAdjustShareAmtAtProjFC__c + AncillaryShareAmtAtProjFC__c &lt; 0) &amp;&amp;  DownsideRisk__c = False,
      /* T */
      0,
      /* F */
      IF (ProfitShareAmtAtProjFC__c &gt;= 0,
         /* T */
         EventProfit__c * ProfitShareAmtAtProjFC__c,
         /* F */
         EventLoss__c * ProfitShareAmtAtProjFC__c
      )
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profit Share Amount At Projection</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProfitShareAmountAtSellout__c</fullName>
        <formula>IF(ISPICKVAL(Type__c, &apos;Internal&apos;),
   /* T */
   LNEProfitShareAmountAtSellout__c ,
   /* F */
   IF ((ProfitShareAmtAtSellFC__c + ExpenseAdjustShareAmtAtSellFC__c + AncillaryShareAmtAtSellFC__c &lt; 0) &amp;&amp;  DownsideRisk__c = False,
      /* T */
      0,
      /* F */
      IF (ProfitShareAmtAtSellFC__c &gt;= 0,
         /* T */
         EventProfit__c * ProfitShareAmtAtSellFC__c,
         /* F */
         EventLoss__c * ProfitShareAmtAtSellFC__c
      )
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profit Share Amount At Sellout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProfitShareAmtAtProjFC__c</fullName>
        <label>Profit Share Amt At Proj FC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>